added tags selected option  to edit option in shop page

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 /* color set up  */
 @theme {
   --color-primary-color: #39B47f; 
+  --color-secondary: #ffbb00; 
 }
 
 
@@ -12,6 +13,8 @@
 /* #A1D8B5 */
 /* #CCDCDB */
 
+/* #777777 */
+/* #ffbb00 */
 
 /* header style  */
 
