--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,9 @@
 @theme {
   --color-primary-color: #39B47f; 
   --color-secondary: #ffbb00; 
+  --color-base-300: #777777;
+  --color-accent: black;
+  --color-accent-content: white;
 }
 
 
