--- a/app/globals.css
+++ b/app/globals.css
@@ -3,10 +3,10 @@
 
 /* color set up  */
 /* @theme {
-  --color-primary-color:blue; 
-  --color-btn-color: blue; 
-  --color-secondary: pink; 
-  --color-base-300:  #ffbb00;
+  --color-primary-color: #135E4B; 
+  --color-secondary: #4CB572; 
+  --color-btn-color: #478c1f;  
+  --color-bg: #CADCAE;
   --color-accent: black;
   --color-accent-content: white;
 } */
@@ -18,7 +18,6 @@
   --color-accent: black;
   --color-accent-content: white;
 
-  /* for shipping  */
   --color-base-400: #CADCAE;
   --color-base-500: #FFC900;
   --color-base-600: #FFE100;
@@ -43,7 +42,7 @@
 
 
 .container{
-  @apply w-[98%] lg:w-[97%]  mx-auto my-3 md:my-5 lg:my-3 py-4 ;  
+  @apply w-[98%] lg:w-[97%]  mx-auto md:py-5 lg:py-3 py-4 ;  
 }
 
 .MuiInputBase-root{
